move stylesheet to appropriate folder and add button/table stylings
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/pkg/sos/html/css/stylesheet.css
+++ b/pkg/sos/html/css/stylesheet.css
@@ -1,24 +1,32 @@
-body { font: 12px Helvetica, sans-serif; }
+body { 
+  font: 12px Helvetica, sans-serif; 
+}
 
 
-.button {
-  background-color: #f4511e;
+a.button {
+  background-color: #4885ed;
   border: none;
   color: white;
   padding: 16px 32px;
   text-align: center;
+  text-transform: uppercase;
   font-size: 16px;
   margin: 4px 2px;
-  opacity: 0.6;
   transition: 0.3s;
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
+  border-radius: 4px;
+}
+
+a:hover {
+  background-color: #3875d8;
 }
 
 table {
 	border-collapse: collapse;
 	width: 100%;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 td, th {
