read in external html file for wifi and format it to new standard
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/pkg/sos/html/css/stylesheet.css
+++ b/pkg/sos/html/css/stylesheet.css
@@ -32,6 +32,15 @@ h2.center {
     width: 75%
 }
 
+.textbutton {
+  color: #3367d6;
+  background-color: white;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+
 
 a.button {
   background-color: #4885ed;
@@ -49,7 +58,7 @@ a.button {
   border-radius: 4px;
 }
 
-a:hover {
+a.button:hover {
   background-color: #3875d8;
 }
 
