Change refresh and connect button types and add link to banner
Signed-off-by: jbetancourt <jmbetancourt@google.com>

--- a/pkg/sos/html/css/stylesheet.css
+++ b/pkg/sos/html/css/stylesheet.css
@@ -22,6 +22,11 @@ h2.center {
   margin: 0 auto;
 }
 
+.bannerbtn {
+  text-decoration: none;
+  color: white;
+}
+
 .content {
   margin-top: 100px;
 }
