--- a/pkg/sos/html/css/stylesheet.css
+++ b/pkg/sos/html/css/stylesheet.css
@@ -105,7 +105,7 @@ td, th {
   margin-top: 0;
 }
 
-input[type=text] {
+input.form[type=text] {
   width: 75%;
   box-sizing: border-box;
   border: none;
